--- a/index.html
+++ b/index.html
@@ -1,31 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link rel="stylesheet" href="./css1/project1.css"/>
+    <link rel="stylesheet" href="./css1/project1.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <nav>
-            <div class="upper">
-                <div class="upperleft">
-                    <a href="./questions.html">Have any questions? </a>
-                    <div class="image1"> </div>
-                    <a href="./questions.html"> 001-1234-88888</a>
-                    <div class="image2"></div>
-                    <a href="./questions.html"> info.deercreative@gmail.com</a>
+        <div class="upper">
+            <div class="upperleft">
+                <a href="./questions.html">Have any questions? </a>
+                <div class="image1"> </div>
+                <a href="./questions.html"> 001-1234-88888</a>
+                <div class="image2"></div>
+                <a href="./questions.html"> info.deercreative@gmail.com</a>
+            </div>
+            <div class="upperright">
+                <a href="./questions.html"> Register and Login</a>
+            </div>
+        </div>
+        <div class="lower">
+            <div class="lowerleft1">
+                Unic
+            </div>
+            <div class="lowerleft2"> at
+
+            </div>
+            <div class="lowerright">
+                <div class="hom">
+                    <a href="./html1/project1.html"> Home</a>
                 </div>
-                <div class="upperright"> 
-                    <a href="./questions.html"> Register and Login</a>
+                <a href="./html1/questions.html"> About</a>
+                <a href="./html1/project1.html"> Cources</a>
+                <a href="./html1/questions.html">Blogs</a>
+                <a href="./html1/questions.html"> Pages</a>
+                <a href="./html1/questions.html"> Contact</a>
+                <div class="image3"> </div>
+                <div class="image4"></div>
+
+            </div>
+
+
+        </div>
+        <div class=" center">
+            <div class="center1"> The Premium System Education </div>
+            <div class=" center2"> Future of Education Technology</div>
+            <div class="center3">
+                <a href="./html1/questions.html">Keyboard Search</a>
+                <div>Category Cources</div>
+                <div>Select Price Type</div>
+            </div>
+        </div>
+        <div name="down">
+            <div class=" bc1">Welcome to unicat E-Learning
+            </div>
+            <div class="bc2"> Lorem ispum sit amet, consectetur adipising elit.
+                Donec vel gravida arcu. Vestibulum feugiat, sapien
+                farmentum congue, quam velit venenatis sem
+            </div>
+        </div>
+        <div class=" facilities">
+            <div class="one">
+                <div class="pic1"></div>
+                <div class="one1"> The Experts</div>
+                <div class="one2"> Lorem dolor sit amet,
+                    consectrtur adipiscing elit
                 </div>
             </div>
-            <div class="lower"></div>
+            <div class="two">
+                <div class="pic2"></div>
+                <div class="two1"> Book & Library</div>
+                <div class="two2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+            </div>
+            <div class="three">
+                <div class="pic3"></div>
+                <div class="three1"> Best Cources </div>
+                <div class="three2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+
+            </div>
+            <div class="four">
+                <div class="pic4"></div>
+                <div class="three1"> Award & Rewards </div>
+                <div class="three2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+
+            </div>
+
+        </div>
+        <div class="onlinecources"> 
+            <div class=" a1"> Popular Online Cources</div>
+            <div class="a2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu. Vestibulum feugiat,
+                 sapien ultrices fermentum congue, quam velit venenatis sem</div>
+                 </div>
+       <div class="bigbox"> 
+        <div class="smallbox1"> 
             <div class=""
+        </div>
+        <div class="smallbox2"></div>
+        <div class="smallbox3"></div>
+       </div>
+                </div>
+
+
 
 
     </nav>
-    
+
 </body>
+
 </html>
