--- a/index.html
+++ b/index.html
@@ -46,68 +46,120 @@
 
 
         </div>
-        <div class=" center">
-            <div class="center1"> The Premium System Education </div>
-            <div class=" center2"> Future of Education Technology</div>
-            <div class="center3">
-                <a href="./html1/questions.html">Keyboard Search</a>
-                <div>Category Cources</div>
-                <div>Select Price Type</div>
-            </div>
-        </div>
-        <div name="down">
-            <div class=" bc1">Welcome to unicat E-Learning
-            </div>
-            <div class="bc2"> Lorem ispum sit amet, consectetur adipising elit.
-                Donec vel gravida arcu. Vestibulum feugiat, sapien
-                farmentum congue, quam velit venenatis sem
-            </div>
-        </div>
-        <div class=" facilities">
-            <div class="one">
-                <div class="pic1"></div>
-                <div class="one1"> The Experts</div>
-                <div class="one2"> Lorem dolor sit amet,
-                    consectrtur adipiscing elit
-                </div>
-            </div>
-            <div class="two">
-                <div class="pic2"></div>
-                <div class="two1"> Book & Library</div>
-                <div class="two2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
-            </div>
-            <div class="three">
-                <div class="pic3"></div>
-                <div class="three1"> Best Cources </div>
-                <div class="three2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
-
-            </div>
-            <div class="four">
-                <div class="pic4"></div>
-                <div class="three1"> Award & Rewards </div>
-                <div class="three2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
-
-            </div>
-
-        </div>
-        <div class="onlinecources"> 
-            <div class=" a1"> Popular Online Cources</div>
-            <div class="a2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu. Vestibulum feugiat,
-                 sapien ultrices fermentum congue, quam velit venenatis sem</div>
-                 </div>
-       <div class="bigbox"> 
-        <div class="smallbox1"> 
-            <div class=""
-        </div>
-        <div class="smallbox2"></div>
-        <div class="smallbox3"></div>
-       </div>
-                </div>
-
-
-
-
     </nav>
+
+    <div class=" center">
+        <div class="center1"> The Premium System Education </div>
+        <div class=" center2"> Future of Education Technology</div>
+        <div class="center3">
+            <a href="./html1/questions.html">Keyboard Search</a>
+            <div>Category Cources</div>
+            <div>Select Price Type</div>
+        </div>
+    </div>
+    <div name="down">
+        <div class=" bc1">Welcome to unicat E-Learning
+        </div>
+        <div class="bc2"> Lorem ispum sit amet, consectetur adipising elit.
+            Donec vel gravida arcu. Vestibulum feugiat, sapien
+            farmentum congue, quam velit venenatis sem
+        </div>
+    </div>
+    <div class=" facilities">
+        <div class="one">
+            <div class="pic1"></div>
+            <div class="one1"> The Experts</div>
+            <div class="one2"> Lorem dolor sit amet,
+                consectrtur adipiscing elit
+            </div>
+        </div>
+        <div class="two">
+            <div class="pic2"></div>
+            <div class="two1"> Book & Library</div>
+            <div class="two2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+        </div>
+        <div class="three">
+            <div class="pic3"></div>
+            <div class="three1"> Best Cources </div>
+            <div class="three2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+
+        </div>
+        <div class="four">
+            <div class="pic4"></div>
+            <div class="three1"> Award & Rewards </div>
+            <div class="three2">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+
+        </div>
+
+    </div>
+    <div class="onlinecources">
+        <div class="a1"> Popular Online Cources</div>
+        <div class="a2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu. Vestibulum
+            feugiat,
+            sapien ultrices fermentum congue, quam velit venenatis sem</div>
+    </div>
+    <div class="bigbox">
+        <div class="smallbox1">
+            <div class="bigimg1"></div>
+            <div class="lowtextone">
+                <div class="st">Sotware Training
+                </div>
+                <div class="mr"> Mr.John Taylor</div>
+                <div class="tone"> Lorem ipsum dolor sit amet, consectetur adipi elitsed do eiusmod tempor</div>
+                <div class=" bottomone">
+                    <div class="aa"> </div>
+                    <div> 20 student</div>
+                    <div class="ab"> </div>
+                    <div> 5 ratings</div>
+                    <div class="ac"> $130</div>
+                </div>
+            </div>
+        </div>
+        <div class="smallbox2">
+            <div class="bigimg2"></div>
+            <div class="lowtexttwo">
+                <div class="dma">Development Mobile Apps
+                </div>
+                <div class="ms"> Ms. Lucius</div>
+                <div class="tone"> Lorem ipsum dolor sit amet, consectetur adipi elitsed do eiusmod tempor</div>
+                <div class=" bottomone">
+                    <div class="ba"> </div>
+                    <div> 20 student</div>
+                    <div class="bb"> </div>
+                    <div> 5 ratings</div>
+                    <div class="bc"> Free</div>
+                </div>
+            </div>
+        </div>
+        <div class="smallbox3">
+            <div class="bigimg3"></div>
+            <div class=" lowtextthree">
+                <div class="sas">Starting a Startup
+                </div>
+                <div class="mr"> Mr. Charles</div>
+                <div class="tone"> Lorem ipsum dolor sit amet, consectetur adipi elitsed do eiusmod tempor</div>
+                <div class=" bottomone">
+                    <div class="ca"> </div>
+                    <div> 20 student</div>
+                    <div class="cb"> </div>
+                    <div> 5 ratings</div>
+                    <div class="cc"> $220</div>
+                </div>
+            </div>
+        </div>
+       
+    </div>
+    </div>
+    <div class="outerviewcource">
+    <div class="viewcource">
+
+        <a href="./html1/questions.html">View Online Cources</a>
+    </div>
+</div>
+
+
+
+
 
 </body>
 
