--- a/index.html
+++ b/index.html
@@ -147,15 +147,63 @@
                 </div>
             </div>
         </div>
-       
+
     </div>
     </div>
     <div class="outerviewcource">
-    <div class="viewcource">
+        <div class="viewcource">
 
-        <a href="./html1/questions.html">View Online Cources</a>
+            <a href="./html1/questions.html">View Online Cources</a>
+        </div>
     </div>
-</div>
+    <div class="middle">
+        <div class="middleleft">
+            <div class="Reg">Register Now</div>
+            <div class="belowreg">Simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry’s standard dumy text ever since the 1500s, when an unknown printer took a galley of type and
+                scrambled it to make a type specimen book.
+            </div>
+            <div class="years">
+                <div class="oneyears">
+                    <div class="topyear">15</div>
+                    <div class="lowyear"> YEARS</div>
+                </div>
+                <div class="oneyears">
+                    <div class="topyear">120k</div>
+                    <div class="lowyear"> YEARS</div>
+                </div>
+                <div class="oneyears">
+                    <div class="topyear">670+</div>
+                    <div class="lowyear"> YEARS</div>
+                </div>
+                <div class="oneyears">
+                    <div class="topyear">320</div>
+                    <div class="lowyear"> YEARS</div>
+                </div>
+            </div>
+        </div>
+        <div class="middleright">
+            <div class="courcesnow"> COURCES NOW</div>
+            <div class="form">
+                <input type="text" placeholder="Your name" />
+                <input type="text" placeholder="Phone" />
+                <select>
+                    <option> Choose Subject</option>
+                    <option> BBA</option>
+                    <option> BCA</option>
+                    <option> BCIS</option>
+                </select>
+                <input type="text" placeholder="Message">
+                <botton> SUBMIT NOW </botton>
+            </div>
+
+        </div>
+    </div>
+    <div class="secondhalf">
+        <div class=" secondone">
+            <
+        </div>
+    </div>
 
 
 
