--- a/index.html
+++ b/index.html
@@ -199,9 +199,57 @@
 
         </div>
     </div>
-    <div class="secondhalf">
-        <div class=" secondone">
-            <
+    <div class="thirdhalf">
+        <div class=" thirdone">
+            <div class="thebest"> The Best Tutors in Town</div>
+            <div class=" thebestone">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Donec vel gravida arcu. Vestibulum feugiat, sapien ultrices fermentum congue,
+                quam velit venenatis sem
+            </div>
+        </div>
+        <div class="thirdtwo">
+            <div class="staff">
+                <div>
+                    <div class="da"></div>
+                </div>
+                <div class=" db"> Jacke Masito</div>
+                <div class="dc"> Marketing & Management</div>
+                <div class="dd">
+                    <div class="de"></div>
+                    <div class="df"></div>
+                    <div class="dg"></div>
+                </div>
+            </div>
+            <div class="staff">
+                <div class="da"> </div>
+                <div class=" db"> William James</div>
+                <div class="dc"> Designer & Website</div>
+                <div class="dd">
+                    <div class="de"></div>
+                    <div class="df"></div>
+                    <div class="dg"></div>
+                </div>
+            </div>
+            <div class="staff">
+                <div class="da"></div>
+                <div class=" db"> John Tayler</div>
+                <div class="dc"> Quantam mechanics</div>
+                <div class="dd">
+                    <div class="de"></div>
+                    <div class="df"></div>
+                    <div class="dg"></div>
+                </div>
+            </div>
+            <div class="staff">
+                <div class="da"></div>
+                <div class=" db"> Veronica Vahn</div>
+                <div class="dc"> Math & Physics</div>
+                <div class="dd">
+                    <div class="de"></div>
+                    <div class="df"></div>
+                    <div class="dg"></div>
+                </div>
+            </div>
         </div>
     </div>
 
