--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <div class="sadfive"> Repaying your student loans(Winter 2017-2018)</div>
                         <div class="sadsix">15.00. 19.30 </div>
                         <div class="sadseven"> This Consumer Action News issue covers topic now being debated before...
-                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -242,7 +242,8 @@
                     <div class=" sadfour">
                         <div class="sadfive"> Alternative data and financial inclusion</div>
                         <div class="sadsix">15.00. 19.30 </div>
-                        <div class="sadseven"> Policy analysts generally agree on a need for reform, but not on which path...</div>
+                        <div class="sadseven"> Policy analysts generally agree on a need for reform, but not on which
+                            path...</div>
                     </div>
                 </div>
             </div>
@@ -272,7 +273,7 @@
                 </div>
             </div>
             <div class="staff">
-                <div class="da"  id="doctorthree"> </div>
+                <div class="da" id="doctorthree"> </div>
                 <div class=" db"> William James</div>
                 <div class="dc"> Designer & Website</div>
                 <div class="dd">
@@ -305,9 +306,58 @@
     </div>
 
 
+    <div class="secondlast">
+        <div class="secondlastone">
+            <div class="underone"> Latest News</div>
+            <div class="undertwo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vel gravida arcu.
+                Vestibulum feugiat, sapien ultrices fermentum congue, quam velit venenatis sem
 
+            </div>
+        </div>
 
+        <div class="secondlasttwo">
+            <div class="partone">
+                <div class="partoneupper"></div>
+                <div class="partonelower">
+                    <div class="preetyone">
+                        Here’s What You Need to Know About Online Testing for the ACT and SAT
+                    </div>
+                    <div class="preetytwo">ADMIN NOVEMBER 11, 2017</div>
+                    <div class="preetythree">Policy analysts generally agree on a need for reform, but not on which path
+                        policymakers should take.
+                        Can America learn anything from other nations...</div>
+                    <div name="preetyfour"> <a href="./html1/questions.html"> Read more</a></div>
+                </div>
+            </div>
 
+            <div class="parttwo">
+                <div class="smartest">
+                    <div class="smart">
+                        Home-based business insurance issue(Spring 2017-2018)
+                    </div>
+                    <div class="smarter"> ADMIN | NOVEMBER 11,2017</div>
+                </div>
+                <div class="smartest">
+                    <div class="smart">
+                        2018 Fall Issue: Credit Card Comparison Site Survey (Summer 2018)
+                    </div>
+                    <div class="smarter"> ADMIN | NOVEMBER 11,2017</div>
+                </div>
+                <div class="smartest">
+                <div class="smart">
+                    Cuentas de cheques gratuitas una encuesta de Consumer Action
+                </div>
+                <div class="smarter"> ADMIN | NOVEMBER 11,2017</div>
+            </div>
+            <div class="smartest">
+                <div class="smart">
+                    Troubled borrowers have fewer repayment or forgiveness options
+                </div>
+                <div class="smarter"> ADMIN | NOVEMBER 11,2017</div>
+            </div>
+
+        </div>
+<div class="final"
 </body>
 
 </html>
