--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                 <div class="ms"> Ms. Lucius</div>
                 <div class="tone"> Lorem ipsum dolor sit amet, consectetur adipi elitsed do eiusmod tempor</div>
                 <div class=" bottomone">
-                    <div class="ba"> </div>
+                    <div class="aa"> </div>
                     <div> 20 student</div>
-                    <div class="bb"> </div>
+                    <div class="ab"> </div>
                     <div> 5 ratings</div>
                     <div class="bc"> Free</div>
                 </div>
@@ -139,9 +139,9 @@
                 <div class="mr"> Mr. Charles</div>
                 <div class="tone"> Lorem ipsum dolor sit amet, consectetur adipi elitsed do eiusmod tempor</div>
                 <div class=" bottomone">
-                    <div class="ca"> </div>
+                    <div class="aa"> </div>
                     <div> 20 student</div>
-                    <div class="cb"> </div>
+                    <div class="ab"> </div>
                     <div> 5 ratings</div>
                     <div class="cc"> $220</div>
                 </div>
@@ -344,20 +344,91 @@
                     <div class="smarter"> ADMIN | NOVEMBER 11,2017</div>
                 </div>
                 <div class="smartest">
-                <div class="smart">
-                    Cuentas de cheques gratuitas una encuesta de Consumer Action
+                    <div class="smart">
+                        Cuentas de cheques gratuitas una encuesta de Consumer Action
+                    </div>
+                    <div class="smarter"> ADMIN | NOVEMBER 11,2017</div>
                 </div>
-                <div class="smarter"> ADMIN | NOVEMBER 11,2017</div>
-            </div>
-            <div class="smartest">
-                <div class="smart">
-                    Troubled borrowers have fewer repayment or forgiveness options
+                <div class="smartest">
+                    <div class="smart">
+                        Troubled borrowers have fewer repayment or forgiveness options
+                    </div>
+                    <div class="smarter"> ADMIN | NOVEMBER 11,2017</div>
                 </div>
-                <div class="smarter"> ADMIN | NOVEMBER 11,2017</div>
-            </div>
 
+            </div>
         </div>
-<div class="final"
+        <div class="final">
+            <div class="finalone">
+                <div class=" rose">
+                    <div class="roseone">SIGN UP FOR NEWS AND OFFERS</div>
+                    <div class="rosetwo">Subscribe to latest smartphones news and great deals we offer</div>
+                </div>
+                <div class="lilly">
+                    <input type="text" placeholder="Your Email" />
+                    <button>SUBSCRIBE</button>
+                </div>
+            </div>
+            <div class="finaltwo">
+                <div class="sunflower">
+                    <div class="sunflowerone" id="red">
+                        <div class="redmain">
+                            <div class="redone">Unic</div>
+                            <div class="redoone">at</div>
+                        </div>
+                        <div class="redtwo">Lorem ipsum dolor sit ametium, consectetur adipiscing elit.</div>
+                        <div class="redthree">
+                            <div class="redimg" id="imgone"></div>
+                            <div class="redimg" id="imgtwo"></div>
+                            <div class="redimg" id="imgthree"></div>
+                            <div class="redimg" id="imgfour"> </div>
+                        </div>
+                    </div>
+                    <div class="sunflowerone" id="green">
+                        <div class=" greenone" id="greencontact"> Contact Us</div>
+                        <div class="greenone"> Email: Info.deercreative@gmail.com</div>
+                        <div class="greenone"> Phone: +(88) 111 555 666</div>
+                        <div class="greenone"> 40 Baria Sreet 133/2 New York City,
+                            United States</div>
+                    </div>
+                    <div class="sunflowerone" id="orange">
+                        <div class="orangeone"> Contact Us</div>
+                        <div class="orangetwo">
+                            <div class="orangethree">
+                                <div class="orangefour"> Home</div>
+                                <div class="orangefour"> About</div>
+                                <div class="orangefour"> Contact</div>
+                                <div class="orangefour"> Features</div>
+
+                            </div>
+                            <div class="orangethree">
+                                <div class="orangefour"> Cources</div>
+                                <div class="orangefour"> Events</div>
+                                <div class="orangefour"> Gallery</div>
+                                <div class="orangefour"> FAQs</div>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="sunflowerone" id="yellow">
+                        <div class=" yellowone"> Mobile</div>
+                        <div class="yellowtwo" id="lol"></div>
+                        <div class="yellowtwo" id="lolo"></div>
+                    </div>
+                </div>
+
+                <div class="belowsunflower">
+                    <div class="leftside">Copyright ©2022 All rights reserved | This template is made with by Colorlib
+                    </div>
+                    <div class="rightside">
+                        <div class="rsone"> Copyright notification</div>
+                        <div class="rstwo">Terms of Use</div>
+                        <div class="rsthree"> Privacy Policy</div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
 
 </html>
