--- a/index.html
+++ b/index.html
@@ -378,7 +378,14 @@
                         </div>
                         <div class="redtwo">Lorem ipsum dolor sit ametium, consectetur adipiscing elit.</div>
                         <div class="redthree">
-                            <div class="redimg" id="imgone"></div>
+                            <div class="redimg" id="imgone" >
+
+                            </div>
+                            <!-- <img src="../pics/facb.jpg" class="redimg" />
+                            <img src="../pics/goo.jpg" class="redimg" />
+                            <img src="../pics/facb.jpg" class="redimg" />
+                            <img src="../pics/facb.jpg" class="redimg" /> -->
+
                             <div class="redimg" id="imgtwo"></div>
                             <div class="redimg" id="imgthree"></div>
                             <div class="redimg" id="imgfour"> </div>
